Refactor adding of files during commit to add the staging path directly and then register digests from map